<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilepage_image_dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/profile_logo"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />



    <TextView
        android:id="@+id/profilepage_textview_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/profilepage_textview_username"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilepage_image_dp" />

    <TextView
        android:id="@+id/profilepage_textview_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/profilepage_textview_bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilepage_textview_username" />


    <TextView
        android:id="@+id/profilepage_textview_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"

        android:fontFamily="@font/montserrat_regular"
        android:text="@string/profilepage_textview_following"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilepage_textview_bio" />

    <Button
        android:id="@+id/profilepage_button_arts"
        android:layout_width="145dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/profilepage_button_follows"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/profilepage_button_fans"
        app:layout_constraintTop_toBottomOf="@+id/profilepage_textview_following" />

    <Button
        android:id="@+id/profilepage_button_fans"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/profilepage_button_arts"
        app:layout_constraintEnd_toStartOf="@+id/profilepage_button_arts"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profilepage_button_arts"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/profilepage_button_follows"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/profilepage_button_arts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/profilepage_button_arts"
        app:layout_constraintTop_toTopOf="@+id/profilepage_button_arts"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/profilepage_textview_fans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/profilepage_stats_fans"
        android:textColor="@color/loginpage_red"
        android:textSize="18dp"

        app:layout_constraintBottom_toBottomOf="@+id/profilepage_button_arts"
        app:layout_constraintEnd_toEndOf="@+id/profilepage_button_arts"
        app:layout_constraintStart_toStartOf="@+id/profilepage_button_arts"
        app:layout_constraintTop_toTopOf="@+id/profilepage_button_arts"
        app:layout_constraintVertical_bias="0.31" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="100dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/profilepage_textview_fans"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/profilepage_button_arts"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/profilepage_button_arts"
        app:layout_constraintTop_toBottomOf="@+id/profilepage_textview_fans" />

    <TextView
        android:id="@+id/profilepage_stats_arts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/profilepage_stats_arts"
        android:textColor="@color/loginpage_red"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/profilepage_button_fans"
        app:layout_constraintEnd_toEndOf="@+id/profilepage_button_fans"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/profilepage_button_fans"
        app:layout_constraintTop_toTopOf="@+id/profilepage_button_fans"
        app:layout_constraintVertical_bias="0.31" />

    <TextView
        android:id="@+id/profilepage_textview_arts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="100dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/profilepage_textview_arts"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/profilepage_button_fans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilepage_stats_arts" />

    <TextView
        android:id="@+id/profilepage_textview_follows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="100dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/profilepage_textview_follows"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/profilepage_button_follows"
        app:layout_constraintStart_toStartOf="@+id/profilepage_button_follows"
        app:layout_constraintTop_toBottomOf="@+id/profilepage_stats_follows" />

    <TextView
        android:id="@+id/profilepage_stats_follows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/profilepage_stats_follows"
        android:textColor="@color/loginpage_red"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/profilepage_button_follows"
        app:layout_constraintEnd_toEndOf="@+id/profilepage_button_follows"
        app:layout_constraintStart_toStartOf="@+id/profilepage_button_follows"
        app:layout_constraintTop_toTopOf="@+id/profilepage_button_follows"
        app:layout_constraintVertical_bias="0.31" />

    <Button
        android:id="@+id/profilepage_button_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profilepage_button_profile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/profilepage_button_home" />

    <Button
        android:id="@+id/profilepage_button_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:onClick="feedpage"
        app:layout_constraintBottom_toBottomOf="@+id/profilepage_button_camera"
        app:layout_constraintEnd_toStartOf="@+id/profilepage_button_camera"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profilepage_button_camera"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/profilepage_button_profile"
        android:background="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/profilepage_button_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/profilepage_button_camera"
        app:layout_constraintTop_toTopOf="@+id/profilepage_button_camera" />

    <ImageView
        android:id="@+id/profilepage_image_camera"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:elevation="100dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/profilepage_button_camera"
        app:layout_constraintEnd_toStartOf="@+id/profilepage_button_profile"
        app:layout_constraintStart_toEndOf="@+id/profilepage_button_home"
        app:layout_constraintTop_toTopOf="@+id/profilepage_button_camera"
        app:srcCompat="@drawable/camera" />

    <ImageView
        android:id="@+id/profilepage_image_profile"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:elevation="100dp"

        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/profilepage_button_profile"
        app:layout_constraintEnd_toEndOf="@+id/profilepage_button_profile"
        app:layout_constraintStart_toStartOf="@+id/profilepage_button_profile"
        app:layout_constraintTop_toTopOf="@+id/profilepage_button_profile"
        app:srcCompat="@drawable/user_white" />

    <ImageView
        android:id="@+id/profilepage_image_home"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:elevation="100dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/profilepage_button_home"
        app:layout_constraintEnd_toEndOf="@+id/profilepage_button_home"
        app:layout_constraintStart_toStartOf="@+id/profilepage_button_home"
        app:layout_constraintTop_toTopOf="@+id/profilepage_button_home"
        app:srcCompat="@drawable/home" />

</androidx.constraintlayout.widget.ConstraintLayout>